--- a/src/pages/Order/modalEditOrder.css
+++ b/src/pages/Order/modalEditOrder.css
@@ -41,6 +41,7 @@
     display: flex;
     flex-direction: row;
     margin: 10px;
+    overflow: hidden;
 }
 
 .order-details-info >div>div{
@@ -86,12 +87,11 @@
     color: #555;
 }
 
-/* Additional styles for buttons */
-.button-delete-order {
-    background-color: #f44336;
+.order-actions button{
     color: white;
     border: none;
     padding: 10px 20px;
+    margin: 5px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
@@ -101,6 +101,20 @@
     border-radius: 4px;
 }
 
+/* Additional styles for buttons */
+.button-delete-order {
+    background-color: #f44336;
+}
+
 .button-delete-order:hover {
     background-color: #d32f2f;
 }
+
+.button-confirm-order {
+    background-color: rgb(0, 135, 27);
+}
+
+.button-confirm-order:hover {
+    background-color: #006c16;
+}
+
