--- a/src/pages/Product/product.css
+++ b/src/pages/Product/product.css
@@ -47,6 +47,19 @@
     border-radius: 4px;
 }
 
+.select-table {
+    width: 90px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 10px;
+    cursor: pointer;
+}
+
+.select-table:hover {
+    border-color:#000000;
+    transition: 0.5s;
+}
+
 .product-actions {
     display: flex;
     align-items: center;
@@ -83,7 +96,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); /* Màu nền đen mờ */
+    background-color: rgba(0, 0, 0, 0.5);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -100,46 +113,45 @@
     display: none;
 }
 
-/* Form */
 .add-product-form div {
-    display: flex; /* Sử dụng flexbox */
-    align-items: center; /* Canh các phần tử theo chiều dọc */
-    margin-bottom: 10px; /* Khoảng cách giữa các dòng */
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
     width: 400px;
 }
 
 
-.add-product-form .avatar{
-    max-width: 200px;
-    max-height: 200px;
-    border-radius: 8px; /* Giảm độ cong để ảnh trông tự nhiên hơn */
-    margin: 20px 0; /* Giảm khoảng cách giữa ảnh và các phần tử khác */
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Thêm hiệu ứng bóng để tạo sâu và sự phân biệt cho ảnh */
-    margin: 0 auto; /* Thêm margin-bottom để đẩy hình ảnh xuống */
+.add-product-form .avatar {
+    max-width: 100px;
+    max-height: auto;
+    border-radius: 8px;
+    margin: 20px 0;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    margin: 0 auto;
 }
 
 
 .add-product-form label {
-    flex: 0 0 120px; /* Đặt kích thước cố định cho nhãn */
-    margin-right: 10px; /* Khoảng cách giữa nhãn và trường nhập */
+    flex: 0 0 120px;
+    margin-right: 10px;
 }
 
 .add-product-form input[type="text"],
 .add-product-form input[type="number"],
 .add-product-form select {
-    flex: 1; /* Đặt trường nhập để chiếm phần còn lại của dòng */
+    flex: 1;
     padding: 8px;
     border-radius: 5px;
     border: 1px solid #ccc;
     box-sizing: border-box;
     background-color: #fff;
     color: #000;
-    margin-bottom: 0; /* Loại bỏ khoảng cách dưới cùng */
+    margin-bottom: 0;
 }
 
 .add-product-form .button-container {
     display: flex;
-    justify-content: end; /* Các nút sẽ được căn chỉnh sang hai phía */
+    justify-content: end;
 }
 
 .add-product-form button {
