--- a/src/pages/Promotion/modalEditPromotion.css
+++ b/src/pages/Promotion/modalEditPromotion.css
@@ -19,7 +19,7 @@
     background-color: white;
     border: 1px solid #ccc;
     border-radius: 5px;
-    padding: 20px;
+    padding: 10px;
     z-index: 1000;
     display: flex;
     flex-direction: column;
@@ -34,8 +34,7 @@
 }
 
 .promotion-profile .promotion-details div strong {
-    min-width: 150px;
-    margin-right: 10px;
+    min-width: 120px;
 }
 
 .promotion-profile .promotion-details input[type="text"],
@@ -46,11 +45,12 @@
     border: 1px solid #ccc;
     border-radius: 5px;
     box-sizing: border-box;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
 }
 
 .promotion-profile .promotion-actions {
     display: flex;
+    justify-content: end;
 }
 
 .promotion-profile .promotion-actions button {
@@ -71,7 +71,7 @@
     background-color: #0056b3;
 }
 
-.button-delete {
+.promotion-profile .button-delete {
     padding: 8px 16px;
     background-color: #ff0000;
     color: white;
@@ -81,6 +81,6 @@
     transition: background-color 0.3s ease;
 }
 
-.button-delete:hover {
+.promotion-profile .button-delete:hover {
     background-color: #b30000;
 }
