--- a/src/pages/User/modalEditUser.css
+++ b/src/pages/User/modalEditUser.css
@@ -78,7 +78,7 @@
     background-color: #0056b3;
 }
 
-.button-delete {
+.user-profile .button-delete {
     padding: 8px 16px;
     background-color: #ff0000;
     color: white;
@@ -88,7 +88,7 @@
     transition: background-color 0.3s ease;
 }
 
-.button-delete:hover {
+.user-profile .button-delete:hover {
     background-color: #b30000;
 }
 
