--- a/src/pages/Product/product.css
+++ b/src/pages/Product/product.css
@@ -90,7 +90,7 @@
 
 
 /* Modal */
-.modal {
+.product-modal {
     position: fixed;
     top: 0;
     left: 0;
@@ -103,13 +103,13 @@
     z-index: 999;
 }
 
-.modal-main {
+.product-modal-main {
     background-color: #fff;
     padding: 20px;
     border-radius: 10px;
 }
 
-.modal.display-none {
+.product-modal.display-none {
     display: none;
 }
 
