--- a/src/pages/Receipt/modalNewReceipt.css
+++ b/src/pages/Receipt/modalNewReceipt.css
@@ -1,4 +1,17 @@
-.modal-main-reciep {
+.modal-reciept{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Màu nền đen mờ */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 999;
+}
+
+.modal-main-reciept {
     width: 80%;
     max-height: 70%; /* Chiều cao tối đa của modal */
     overflow-y: auto; /* Cho phép cuộn nội dung nếu nội dung quá dài */
@@ -9,7 +22,7 @@
     text-align: center; /* Canh giữa nội dung trong modal */
 }
 
-.modal-main-reciep h2 {
+.modal-main-reciept h2 {
     margin-bottom: 10px;
     text-align: center; /* Canh giữa tiêu đề */
 }
